--- a/my-app/src/styles/appStyles.css
+++ b/my-app/src/styles/appStyles.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
 }
 
-.quill .ql-container .ql-editor{
+.ql-container .ql-editor{
 
     width: 8.5in;
     min-height: 11in;
@@ -24,7 +24,7 @@ body {
 
 }
 
-.ql-toolbar.ql-snow{
+.container .ql-toolbar.ql-snow{
     display: flex;
     justify-content: center;
     position: sticky;
